fixed clipping issue

--- a/body.css
+++ b/body.css
@@ -35,7 +35,7 @@ html {
 }
 
 body {
-	width: 100%;
+	width: 100vw;
 	overflow-x: hidden;
 }
 
