--- a/nav.css
+++ b/nav.css
@@ -4,7 +4,7 @@
     z-index: 5;
     display: flex;
     box-sizing: border-box;
-    width: 100%;
+    width: 100vw;
     height: 64px;
     justify-content: space-between;
     align-items: center;
